# experts4bit-qlora

./: .gitignore  CHANGELOG.md  LICENSE  PROVENANCE.md  PROVENANCE.md.ots  README.md  pyproject.toml
.github/workflows/: aliases.yml  ci.yml  release.yml  upstream-canary.yml
.ots-history/: PROVENANCE.md.ots.2
ab-telemetry/: README.md  make_charts.py  run_ab_resilient.sh
ab-telemetry/access-pattern/: README.md  RESULTS.md  access_counter.py  access_olmoe.jsonl  access_olmoe_diverse.jsonl  access_predictions.json  access_qwen30b.jsonl  access_qwen30b_diverse.jsonl  access_reduction.json  reduce_access.py  run_access_e4b.py  (+3 more)
aliases/experts-mxfp4/: README.md  pyproject.toml
bench/: RESULTS-gptoss-hybrid-ab.md  RESULTS-informed-hotsets.md  RESULTS-pipelined-composite.md  bench_energy_excluded.py  bench_gptoss_hybrid.py  gptoss_ab_pod.sh  informed_hotsets_pod.sh  kaggle-t4-validation.ipynb  run-ablation.sh  run-bigmoe-decode.sh  run-decode-bench.sh  run-mode-ab.sh  run-offload-ab.sh
deploy/: Dockerfile  docker-compose.yml  requirements.txt
docs/: BENCHMARKS.md  BITSANDBYTES.md  DIVERGENCE_ONSET_PROBE.md  DIVERGENCE_ONSET_PROBE.md.ots  EXPERT_STREAMING_PROFILE.md  EXPERT_STREAMING_PROFILE.md.ots  LAYOUT_FACTS.md  LAYOUT_FACTS.md.ots  MEASUREMENT_AUDIT.md  MEASUREMENT_AUDIT.md.ots  METHODOLOGY.md  MODE_DECOUPLED_ADAPTERS.md  MODE_DECOUPLED_ADAPTERS.md.ots  N1_ROUTING_PINNED_SERVE.md  N1_ROUTING_PINNED_SERVE.md.ots  N2_PHASE01_RECONSTRUCTION.md  N2_PHASE01_RECONSTRUCTION.md.ots  NEXT_CAMPAIGN_LANES.md  NEXT_CAMPAIGN_LANES.md.ots  NULL_LADDER_1024_AMENDMENT.md  NULL_LADDER_1024_AMENDMENT.md.ots  OFFLOAD-TRANSFER-NOTES.md  OFFLOAD_MEMORY_FACTS.md  OFFLOAD_MEMORY_FACTS.md.ots  OLMOE_EXPERTSNBIT_GRID.md  OLMOE_EXPERTSNBIT_GRID.md.ots  OLMOE_REPEAT_VALIDATION_PLAN.md  OLMOE_REPEAT_VALIDATION_PLAN.md.ots  PLAN_ROUTED_V3_AMENDMENTS_A1-A4.md  PLAN_ROUTED_V3_AMENDMENTS_A1-A4.md.ots  POST_AUDIT_WORK_QUEUE.md  POST_AUDIT_WORK_QUEUE.md.ots  PREDICTION_LEDGER.md  PREDICTION_LEDGER.md.ots  QWEN3_30B_EXPERTSNBIT_GRID.md  QWEN3_30B_EXPERTSNBIT_GRID.md.ots  RUNPOD_DISTRIBUTED_VALIDATION.md  RUNPOD_DISTRIBUTED_VALIDATION.md.ots  SERVING.md  SPECULATIVE_LANES_ADDENDUM_1.md  (+18 more)
experts4bit_qlora/: __init__.py  cold_engine.py  expert_profile.py  fast.py  gptoss.py  hot_residency.py  infer.py  loader.py  lora.py  mxfp4.py  offload.py  pipelined.py  serve.py  train.py  triton_nf4.py  util.py  verify.py
scripts/: analyze_factor_1024.py  analyze_ladder1024.py  check_readme_links.py  decode_repeat.py  divergence_curve.py  eval_adapter_query_modes.py  eval_null_per_example.py  make_cert_rev2_manifest.py  make_expert_streaming_manifest.py  make_ladder1024_manifest.py  make_olmoe_repeat_manifest.py  make_post_audit_manifest.py  make_spine_extras_manifest.py  mode_matrix_common.py  n2_analyze_routed_stream.py  n2_bw_gather.py  n2_decode_trace.py  n3_fragility_attribution.py  one_step_certificate.py  routing_pinned_serve.py  runpod_claim_and_run.py  summarize_expert_streaming.py  summarize_null_ladder.py  summarize_paired_transfer.py  summarize_runpod_jobs.py  summarize_train_query_matrix.py  train_mode_adapters.py  upstream_canary.py  validate_expertsnbit.py  validate_job_provenance.py  wheel_smoke.py  wrms_per_format.py
tests/: test_cold_engine.py  test_expert_streaming_tools.py  test_experts4bit_validation.py  test_expertslora_paths.py  test_fast.py  test_gather_addr_kernel.py  test_gptoss_forward.py  test_gptoss_load_e2e.py  test_hot_residency.py  test_hot_residency_gptoss.py  test_inference_decode.py  test_loader_architectures.py  test_mode_matrix_tools.py  test_mxfp4_dequant.py  test_nbit_schemes.py  test_offload.py  test_offload_prefetch.py  test_offload_stats_arena.py  test_paired_transfer.py  test_pipelined.py  test_pipelined_graphs.py  test_provenance_gate.py  test_reference_parity.py  test_runpod_job_tools.py  test_serve.py  test_triton_nf4.py  test_verify_moe_4bit.py
unsloth_puzzles/: README.md  SUBMISSION.md  _validate_fsdp2.py  bench_triton_nf4.py  fsdp2_config.yaml  fsdp2_qlora_sft.py  run_kaggle.sh  run_kaggle_triton.sh  task_a_triton_nf4.ipynb  task_b_kaggle_2xT4.ipynb
(+611 files in other folders)
