[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "experts4bit-qlora"
version = "0.6.2"
description = "QLoRA fine-tuning of fused 4-bit Mixture-of-Experts on a single small GPU, on stock bitsandbytes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jordan Anderson", email = "paul.jordan.anderson@gmail.com" }]
keywords = ["bitsandbytes", "qlora", "moe", "mixture-of-experts", "quantization", "nf4", "lora", "olmoe"]
dependencies = [
    "torch>=2.2",
    "bitsandbytes>=0.43",
]

# The Experts4bit primitive, ExpertsLoRA adapters, and the benchmarks need only torch + bitsandbytes.
# The end-to-end OLMoE streaming trainer additionally needs transformers>=5.0 (fused expert layout).
[project.optional-dependencies]
# The fused single-launch grouped GEMM (dequant-inside-the-GEMM, fp32 accum) —
# enables experts4bit_qlora.enable_fast() for inference. Import stays optional.
fast = [
    "grouped-nf4-gemm>=0.1.1",
]
train = [
    "transformers>=5.0",
    "datasets>=2.14",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "huggingface_hub>=0.23",
]
# The HTTP serving shim (experts4bit_qlora.serve) — loader deps included so it installs without [train].
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2",
    "transformers>=5.0",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "huggingface_hub>=0.23",
]
test = ["pytest>=7", "transformers>=5.0", "accelerate>=0.30", "safetensors>=0.4", "fastapi>=0.110", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/pjordanandrsn/experts4bit-qlora"
"Upstream (bitsandbytes#1965)" = "https://github.com/bitsandbytes-foundation/bitsandbytes/pull/1965"
"Tracking (bitsandbytes#1849)" = "https://github.com/bitsandbytes-foundation/bitsandbytes/issues/1849"

[tool.setuptools.packages.find]
include = ["experts4bit_qlora*"]

[tool.ruff]
line-length = 119

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
experts4bit_qlora = ["py.typed"]
